--- a/karndip/styel.css
+++ b/karndip/styel.css
@@ -2,10 +2,10 @@ body {
   margin: 0;
   padding: 0;
 }
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-  font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat",sans-serif;
 }
 
 #english {
@@ -88,6 +88,7 @@ header {
 #head #ham {
   content-visibility: hidden;
 }
+/* below header part */
 
 .belowheader {
   display: flex;
@@ -97,6 +98,8 @@ header {
 }
 .belowheader img {
   max-width: 100%;
+  
+
 }
 .belowheader h1 {
   color: rgb(11, 53, 88);
@@ -216,11 +219,9 @@ header {
 /* ----------------expectation part --------------------*/
 
 .belowheader3 {
-  /* border: 2px solid black; */
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 600px; */
   flex-direction: column;
   margin-top: 30px;
 }
@@ -229,16 +230,12 @@ header {
   box-sizing: border-box;
   flex: 1;
   padding: 20px;
-  /* height: 200px; */
-  /* margin-right: 200px; */
+ 
 }
 .content1 {
   display: flex;
   justify-content: center;
-  /* box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);; */
   margin-top: 40px;
-  /* margin-top: 300px; */
-  /* padding: 70px; */
 }
 .content:last-child {
   border-right: none;
@@ -365,10 +362,7 @@ header {
 section {
   background-color: rgb(244, 248, 255);
   border-radius: 34px;
-
-  /* margin-left: 40px; */
   margin: 30px;
-  /* padding:30px; */
 }
 
 /*-------------- video part css-----------------*/
