--- a/Avishek/style.css
+++ b/Avishek/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
 }
 
@@ -23,19 +26,20 @@ body {
 }
 
 #english {
-    height: 30px;
+
+    padding-bottom: 0.7%;
     width: 100%;
     display: flex;
     flex-direction: row;
     background-color: aliceblue;
     text-align: center;
     color: rgb(100, 118, 152);
-
     padding-left: 80%;
     padding-top: 1%;
 }
 
 #english span {
+    
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -237,6 +241,8 @@ header {
 
 .wrap_button {
     display: flex;
+    width: 23%;
+    /* border: 2px solid red; */
 
 }
 
@@ -248,7 +254,7 @@ header {
 
 .wrap_button .sign_in {
     text-align: center;
-    width: 150px;
+    width: 100%;
     padding: 10px;
     background-color: rgb(0, 107, 255);
     font-size: 1.1rem;
@@ -264,10 +270,10 @@ header {
 }
 
 .wrap_button .demo {
-    height: 15px;
+    /* height: 15px; */
     text-align: center;
-    width: 110px;
-    padding: 14px;
+    width: 100%;
+    padding: 10px;
     background-color: white;
     text-decoration: none;
     font-size: 1.1rem;
@@ -294,6 +300,46 @@ header {
     width: 100%;
     height: 100%;
 }
+
+
+@media screen  and (max-width:770px) {
+    .page1 h1 {
+        font-size: 1.9rem;
+        text-align: center;
+        
+    }
+
+    .page1 p {
+        font-size: 1rem;
+    }
+    .img1 img {
+        width: 100%;
+        height: 100%;
+    }
+    .img1 {margin: auto;
+
+        display: f;
+        width: 80%;
+        height: 550.5px;
+        position: absolute;
+        top: 80%;
+    }
+    /* .page4 .icon {
+        width: 90%;     */
+    
+
+    .page5 > h1{
+        text-align: center;
+    }
+
+    /* .last .lst_bttn {
+        margin: 0;
+        width: fit-content;
+        text-align: center;
+    } */
+
+}
+/* page 2 */
 
 .page2 {
     display: flex;
@@ -410,11 +456,14 @@ header {
 }
 
 .steps .text>span {
+    /* margin: 1%; */
+    padding: 10px;
     color: rgb(0, 107, 255);
     font-weight: 600;
 }
 
 .steps .text>h1 {
+    padding:  15px 0;
     color: rgb(11, 53, 88);
     font-weight: 650;
     font-size: 2.3rem;
@@ -424,6 +473,7 @@ header {
     width: 80%;
     color: rgb(97, 124, 152);
     font-size: 1.2rem;
+    padding:  15px 0;
 }
 
 /* page4 */
@@ -458,9 +508,11 @@ header {
     font-weight: 650;
     font-size: 3rem;
     width: 70%;
+    padding: 10px;
 }
 
 .page4 .icon {
+    margin: 2%;
     width: 55%;
     display: flex;
     justify-content: space-between;
@@ -515,6 +567,8 @@ header {
     color: rgb(11, 53, 88);
 }
 
+
+
 .page5 .slidebar button {
     background: transparent;
     border-style: none;
@@ -531,25 +585,27 @@ header {
 }
 
 .page5 .slidebar {
+    margin: 5%;
     width: 75%;
     display: flex;
     justify-content: space-between;
 }
 
 .avail_pref {
-    margin: 3%;
+    margin-bottom: 3%;
     width: 70%;
     display: flex;
 }
 
 .avail_pref .text1 {
-    margin-top: 3%;
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     width: 50%;
 }
 
 .avail_pref .text1>p {
+    margin:  20px 0;
     line-height: 20px;
     font-weight: 400;
     font-size: 1.1rem;
@@ -595,8 +651,8 @@ header {
 }
 
 .page6>p {
-    width: 52%;
-    margin-top: 10px;
+    width: 55%;
+    margin-top: 3%;
     font-size: 1.4rem;
     text-align: center;
     color: rgb(33, 74, 125);
@@ -624,32 +680,42 @@ header {
 .page6 .sec .sec2 .sec_sub {
     border: 0.3px solid #efefef;
     border-radius: 10px;
+    width: 250px;;
     padding: 12px;
+}
+
+.page6 .sec .sec2 .sec_sub > img {
+    margin: 10px 10px;
 }
 
 .page6 .sec .sec2 .sec_sub>h4 {
     font-size: 1rem;
     color: rgb(11, 53, 88);
+    margin: 10px 10px;
 }
 
 .page6 .sec .sec2 .sec_sub>p {
     color: rgb(33, 74, 125);
+    margin: 10px 10px;
 }
 
 .page6 .sec .sec2 .sec_sub>a {
     color: rgb(0, 107, 255);
     text-decoration: none;
     font-weight: 650;
+    margin: 10px 10px;
 }
 
 
 .sec {
     display: flex;
     width: 70%;
+    margin: 6%;
 }
 
 .sec .sec2 .sec_sub:hover {
     background-color: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     cursor: pointer;
 }
 
@@ -684,6 +750,7 @@ header {
     color: rgb(11, 53, 88);
     font-size: 2.7rem;
     width: 60%;
+    margin: 2.5% 0;
     text-align: center;
 }
 
@@ -714,6 +781,7 @@ header {
 .page7 .admin .admin_sub_txt>h1 {
     color: rgb(11, 53, 88);
     font-weight: bold;
+    margin: 3% 0;
     font-size: 2.2rem;
 }
 
@@ -757,6 +825,7 @@ header {
 .security .security_txt>h1 {
     color: rgb(11, 53, 88);
     font-weight: bold;
+    margin: 3% 0;
     font-size: 2.2rem;
 }
 
@@ -795,6 +864,7 @@ header {
 
 .design .des_txt .des_txt_sub>p {
     width: 70%;
+    margin: 3% 0;
     font-size: 1.1rem;
     color: rgb(71, 103, 136);
 }
@@ -817,6 +887,8 @@ header {
     width: 50%;
 }
 
+/* last  */
+
 
 .last {
     width: 77%;
@@ -828,7 +900,8 @@ header {
 }
 
 .last .lst_txt {
-    margin: 6%;
+    margin-left: 4%;
+    margin-top: 7%;
     width: 80%;
 }
 
@@ -838,6 +911,8 @@ header {
 
 .last .lst_txt>p {
     font-size: 1.2rem;
+    width: 100%;
+    margin: 3% 0;
 }
 
 .last .lst_bttn {
@@ -856,6 +931,46 @@ header {
     font-weight: 600;
 
 }
+
+@media screen and (max-width: 1100px) and (min-width: 900px) {
+    .last .lst_bttn {
+        width: 30%;
+        text-align: center;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
