some changes done in below navbar part

--- a/karndip/styel.css
+++ b/karndip/styel.css
@@ -2,10 +2,10 @@ body {
   margin: 0;
   padding: 0;
 }
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    font-family: "Montserrat",sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 #english {
@@ -43,7 +43,6 @@ body {
 }
 
 #calendlyimage {
-  /* margin-top: 0; */
   margin-left: 10%;
 }
 
@@ -52,7 +51,7 @@ header {
   text-align: center;
   padding-top: 1.5%;
   padding-bottom: 0.5%;
-  /* justify-content: center; */
+
   position: sticky;
   top: 0;
 
@@ -95,15 +94,17 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-top: 40px;
 }
 .belowheader img {
-  max-width: 100%;
-  
-
+  width: 100%;
 }
 .belowheader h1 {
   color: rgb(11, 53, 88);
   font-size: 60px;
+}
+.belowheader p{
+  padding: 10px;
 }
 .talktosales {
   border: 1px solid rgb(0, 107, 255);
@@ -125,9 +126,7 @@ header {
     background-size 1ms ease 0s;
   color: rgb(71, 103, 136);
   padding: 10px 18px;
-  /* line-height: 1.6; */
   display: inline-flex;
-  /* opacity: 1; */
   background-color: transparent;
   border-radius: 15px;
   cursor: pointer;
@@ -148,7 +147,6 @@ header {
 }
 .material-symbols-outlined {
   color: rgb(0, 107, 255);
- 
 }
 .chat {
   color: rgb(0, 107, 255);
@@ -157,7 +155,8 @@ header {
   border-radius: 5px;
   cursor: pointer;
   margin-left: 25px;
-
+  margin-top: 15px;
+  padding: 5px;
 }
 
 * {
@@ -183,7 +182,7 @@ header {
   padding: 19px;
   border-radius: 9px;
   font-size: 1.25rem;
- 
+
   text-align: left;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -230,7 +229,6 @@ header {
   box-sizing: border-box;
   flex: 1;
   padding: 20px;
- 
 }
 .content1 {
   display: flex;
